2008-09-03  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/mosaic/ccm-mosaic.c (ccm_mosaic_on_key_press),
	(ccm_mosaic_get_damaged_area), (ccm_mosaic_paint_area),
	(ccm_mosaic_screen_paint):
	  - Improve redraw (work in progress)
	* src/ccm-pixmap-glitz.c (ccm_pixmap_glitz_bind):
	  - Improve redraw (work in progress)

2008-09-01  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/magnifier/ccm-magnifier.c
	(ccm_magnifier_cursor_convert_to_rgba): Fix mouse image conversion.
	* plugins/mosaic/ccm-mosaic.c (ccm_mosaic_init),
	(ccm_mosaic_create_window), (ccm_mosaic_recalc_coords),
	(ccm_mosaic_send_leave_event), (ccm_mosaic_send_enter_event),
	(ccm_mosaic_simulate_enter_leave_event), (ccm_mosaic_send_event),
	(ccm_mosaic_broadcast_event), (ccm_mosaic_mouse_over_area),
	(ccm_mosaic_on_event), (ccm_mosaic_on_key_press),
	(ccm_mosaic_get_damaged_area), (ccm_mosaic_paint_area),
	(ccm_mosaic_screen_paint), (ccm_mosaic_window_paint):
	* src/ccm-screen.c (ccm_screen_paint),
	(ccm_screen_undamage_region), (ccm_screen_activate_window):
	* src/ccm.h: Partial mosaic fix.

2008-08-30  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-window.c (impl_ccm_window_query_geometry):
	  - use ccm_window_set_opaque_region to define opaque region on resize to 
	    keep transform matrix on opaque region.

2008-08-24  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-drawable.h:
      - remove unused damage virtual method.
	* src/ccm-property-async.c (ccm_property_async_init),
	(ccm_property_async_finalize), (ccm_property_async_idle),
	(ccm_property_async_handler):
      - remove idle function on destroy.

2008-08-20  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-property-async.c (ccm_property_async_class_init),
	(ccm_property_async_handler):
	* src/ccm-window.c (ccm_window_init), (ccm_window_finalize),
	(ccm_window_on_property_async_error),
	(ccm_window_on_get_property_async),
	(ccm_window_get_property_async): 
      - Fix a memory leak.
